<resources>

    <string name="app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="app_name">Playlist maker</string>
    <string name="main_name">Playlist Maker.</string>
    <string name="main_search">Поиск</string>
    <string name="main_media">Медиатека</string>
    <string name="back_desc">back</string>
    <string name="settings_title">Настройки</string>
    <string name="search_title">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="settings_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="setting_support">Написать в поддержку</string>
    <string name="setting_terms">Пользовательское соглашение</string>
    <string name="supp_email_address">desska@yandex.ru</string>
    <string name="supp_email_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supp_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="not_found_error">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_media_error">Ваша медиатека пуста</string>
    <string name="empty_playlist_error">Вы не создали ни одного плейлиста</string>
    <string name="update_button_header">Обновить</string>
    <string name="clear_history_button_header">Очистить историю</string>
    <string name="history_text_header">Вы искали</string>
    <string name="theme_switcher_header">Темная тема</string>
    <string name="media_title">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks_page">Избранные треки</string>
    <string name="playlist_page">Плейлисты</string>
    <string name="track_time">Длительность</string>
    <string name="track_collection">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="track_sample_time">0:30</string>
    <string name="track_null_time">00:00</string>
    <string name="new_list_title">Новый плейлист</string>
    <string name="new_list_name_hint">Название*</string>
    <string name="new_list_description_hint">Описание</string>
    <string name="create_button_title">Создать</string>
    <string name="tracks_qty">%1$d треков</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="confirm_new_list_title">Завершить создание плейлиста?</string>
    <string name="confirm_new_list_message">Все несохраненные данные будут потеряны</string>
    <string name="confirm_new_list_negative_button">Отмена</string>
    <string name="confirm_new_list_positive_button">Завершить</string>
    <string name="add_track_playlist_title">Добавить в плейлист</string>
    <string name="track_is_in_list_msg">Трек уже добавлен в плейлист %1s</string>
    <string name="track_added_in_list_msg">Добавлено в плейлист %1s</string>
    <string name="empty_edit_list_text">В этом плейлисте нет треков</string>
    <string name="confirm_delete_track_title">Удалить трек</string>
    <string name="confirm_delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="confirm_delete_track_negative_button">Отмена</string>
    <string name="confirm_delete_track_positive_button">Удалить</string>
    <string name="confirm_delete_list_title">Удалить плейлист</string>
    <string name="confirm_delete_list_message">Хотите удалить плейлист</string>
    <string name="confirm_delete_list_negative_button">Нет</string>
    <string name="confirm_delete_list_positive_button">Да</string>
    <string name="edit_playlist_menu_share">Поделиться</string>
    <string name="edit_playlist_menu_edit">Редактировать информацию</string>
    <string name="edit_playlist_menu_delete">Удалить плейлист</string>
    <string name="edit_playlist_toolbar_title">Редактировать</string>
    <string name="edit_playlist_save_button_title">Сохранить</string>
    <string name="empty_share_msg">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <plurals name="tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>

</resources>

