<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/main_medium_margin"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="62dp"
        android:paddingBottom="12dp"
        android:text="@string/main_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/main_text_size" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/yp_white"
        android:text="@string/main_search"
        android:textAllCaps="false"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/main_medium_margin"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_medium_margin"
        app:iconTint="@color/black"
        android:letterSpacing="0"/>

    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/yp_white"
        android:text="@string/main_media"
        android:textAllCaps="false"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/main_medium_margin"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_medium_margin"
        app:iconTint="@color/black"
        android:letterSpacing="0"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/yp_white"
        android:text="@string/settings_title"
        android:textAllCaps="false"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/main_medium_margin"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_medium_margin"
        app:iconTint="@color/black"
        android:letterSpacing="0"/>

    />

</LinearLayout>