<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical"
    android:paddingStart="@dimen/settings_small_margin"
    android:paddingEnd="@dimen/small_padding"
    android:paddingBottom="@dimen/big_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/yp_white"
            android:contentDescription="@string/back_desc"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yp_white"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:paddingTop="@dimen/ultra_small_padding"
            android:text="@string/settings_title"
            android:textAlignment="center"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/main_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="@dimen/padding_21"
                android:text="@string/settings_theme"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/small_text_size" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="@dimen/padding_21"
                android:shadowColor="@color/yp_text_gray"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding_19"
                android:layout_marginBottom="@dimen/padding_18"
                android:text="@string/settings_share"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/padding_19"
                android:layout_marginBottom="@dimen/padding_18"
                android:src="@drawable/share" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding_19"
                android:layout_marginBottom="@dimen/padding_18"
                android:text="@string/setting_support"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/padding_19"
                android:layout_marginBottom="@dimen/padding_18"
                android:src="@drawable/support" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding_19"
                android:layout_marginBottom="@dimen/padding_18"
                android:text="@string/setting_terms"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/padding_19"
                android:layout_marginBottom="@dimen/padding_18"
                android:src="@drawable/arrow_forward" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>