<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.search.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <TextView
            style="@style/MainToolbarTextView"
            android:text="@string/search_title" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16">

        <EditText

            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/margin_36"
            android:paddingVertical="@dimen/margin_8"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="?attr/colorSecondaryVariant" />
        


        <ImageView
            android:id="@+id/search_edit_search_button"
            style="@style/SearchEditButton"
            android:layout_gravity="start"
            android:layout_margin="@dimen/margin_8"
            android:src="@drawable/search"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/search_edit_clear_button"
            style="@style/SearchEditButton"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_8"
            android:src="@drawable/clear"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:indeterminateTint="@color/yp_purple"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/search_msg_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="104dp"
        android:visibility="gone"
        tools:src="@drawable/connection_error"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/search_msg_text"
        style="@style/searchMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_24"
        android:gravity="center"
        android:visibility="gone"
        tools:text="@string/not_found_error"
        tools:visibility="visible" />

    <android.widget.Button
        android:id="@+id/search_update_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_update_button"
        android:fontFamily="@font/ys_display_medium"
        android:paddingHorizontal="@dimen/margin_8"
        android:text="@string/update_button_header"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondary"
        android:textFontWeight="500"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_header"
            style="@style/searchMsg"
            android:textFontWeight="500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/history_text_header"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/track_list_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/clear_history_button"
            style="@style/additionalSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/margin_24"
            android:paddingHorizontal="@dimen/margin_8"
            android:text="@string/clear_history_button_header"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>


</LinearLayout>


