<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.practicum.playlistmaker.newlist.ui.NewListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        android:orientation="vertical"
        tools:context=".newlist.ui.NewListFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/MainToolbarTextView"
                android:text="@string/new_list_title" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/new_list_cover_margin"
            android:layout_marginTop="26dp"
            android:background="@drawable/rounded_rectangle"
            android:clipToOutline="true"
            android:scaleType="center"
            app:backgroundTint="@null"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/new_list" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/newListTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:hint="@string/new_list_name_hint"
            app:layout_constraintLeft_toRightOf="@id/left_border"
            app:layout_constraintRight_toLeftOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/cover">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/newListTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{viewmodel.onNameTextChanged}"
                android:text="@={viewmodel.nameState}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/newListTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:hint="@string/new_list_description_hint"
            app:layout_constraintLeft_toRightOf="@id/left_border"
            app:layout_constraintRight_toLeftOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@id/name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/newListTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.descriptionState}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:background="@drawable/create_list_button"
            android:text="@string/create_button_title"
            android:textColor="@color/yp_white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/left_border"
            app:layout_constraintRight_toLeftOf="@id/right_border"
            tools:enabled="true" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/new_list_guide_line_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/new_list_guide_line_margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>